# insight-recorder

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  README.md  TODO  configure.ac  dawati-user-testing  dutMain.py  dutMux.py  dutNewRecording.py  dutProject.py  dutScreencastRecord.py  dutWebcamRecord.py  gtk3-recordmydesktop.py  insight-recorder  rmdMux.py  rmdWebcamRecord.py  setup.py
data/: Makefile.am  dawati-user-testing.desktop  insight-recorder.desktop  insight-recorder.desktop.in.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  es.po  fr.po  insight-recorder.pot
src/: Makefile.am
src/dut/: __init__.py  dutIndicator.py  dutNewRecording.py  dutProject.py  dutWebcamRecord.py
src/isr/: Makefile.am  __init__.py  isrIndicator.py  isrMain.py  isrMux.py  isrNewRecording.py  isrProject.py  isrRecord.py  isrScreencastRecord.py  isrVUMeter.py  isrWebcamRecord.py  isrnewprojectdialog.ui
